Use KIO::OpenFileManagerWindowJob to open folder

BUG: 460997
FIXED-IN: 24.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>